New in v1.1.9 (????/??/??)
--------------------------

Glob escaping support via backslash.  (Andrew Price)


New in v1.1.8 (2007/01/29)
--------------------------

Cygwin generates EACCESS on fsync -- so accept it rather than dieing.
(Marc Dyksterhouse).

Add "FilenameMapping.set_init_quote_vals" security exception.
(Marc Dyksterhouse)

Escape DOS device filenames when necessary.  Adjust DOS filename
quoting to work properly with cygwin.  (Marc Dyksterhouse)

Allow for preservation of FinderInfo for folders and fix typo
in Time.py. (Patch from Andrew Ferguson.)

Test for symlink permissions support to avoid unncessary syscalls on
platforms that don't support them. (Patch from Andrew Ferguson.)

RPM specfile update from Gordon Rowell.


New in v1.1.7 (2006/11/12)
--------------------------

Fix showstopper problem on OSX handling pre-1.1.6 rdiff-backup metadata.
(Patch from Andrew Ferguson.)


New in v1.1.6 (2006/11/11)
--------------------------

Man page update from roland <devzero@web.de>.

--min-file-size/--max-file-size support.  (Patch from Wout Mertens.)

Mac OS X Extended Attributes support.  (Patch from Andrew Ferguson.)

Preserve Mac OS X 'Creation Date' field across backups.  (Patch from Andrew
Ferguson.)

Set symlink permissions properly.  (Patch from Andrew Ferguson.)

Selection fix: empty directories could sometimes be improperly
excluded if certain include expressions involving a non-trailing '**'
were used.  Bug reported by Toni Price.

A few minor changes to help rdiff-backup back up to an SMB/CIFS share.
Thanks to Cengiz Gunay for testing.

Fix a traceback due to an off-by-1 error in "--remove-older-than nB".

Fix a security violation when restoring from a remote repository.
(Patch from Charles Duffy.)

Added times like "Mon Jun 5 11:00:23 1997" to the recognized time
strings.  (Suggested by Wolfgang Dautermann.)


New in v1.1.5 (2006/01/01)
--------------------------

rdiff-backup will now exit by default if it thinks another